<resources>
    <string name="app_name">星梦缘</string>
    <string name="label_star">星座</string>
    <string name="label_pair">配对</string>
    <string name="label_luck">运势</string>
    <string name="label_me">我的</string>
    <string name="pair_tv">请选择您的星座和对方的星座，点击配分析即可</string>
    <string name="man">男生：</string>
    <string name="woman">女生：</string>
    <string name="pair_button_luck">每日抽奖</string>
    <string name="pair_button_pair">配对分析</string>

    <string name="about_app">关于应用</string>
    <string name="function">功能介绍</string>
    <string name="update">更新日志</string>
    <string name="feedback">反馈问题</string>

    <string name="member">我的会员</string>
    <string name="wallet">我的钱包</string>
    <string name="attire">我的装扮</string>
    <string name="collection">我的收藏</string>
    <string name="quit">退出应用</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
