<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgyellow"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/pair_man_bg">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/man"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/pair_man_iv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

        <Spinner
            android:id="@+id/pair_man_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/pair_woman_bg">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/woman"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/pair_woman_iv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

        <Spinner
            android:id="@+id/pair_woman_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:text="@string/pair_tv"/>

    <Button
        android:id="@+id/pair_button_luck_draw"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/pair_button_luck"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/pair_button"/>

    <Button
        android:id="@+id/pair_button_pair"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/pair_button_pair"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/pair_button"/>

</LinearLayout>