<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawablelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--顶部标题栏-->

        <TextView
            android:id="@+id/main_tv_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:background="@color/lightyellow"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/main_header_cv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/header"
            android:layout_alignBottom="@id/main_tv_title"
            android:layout_marginBottom="3dp"/>

        <!--底部导航栏-->
        <RadioGroup
            android:id="@+id/main_rg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/lightyellow"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="5dp">

            <!--android:button属性用来设置为按钮不可见
                android:drawableTop属性用来设置按钮的图片，通过drawable下的main_rb_star文件设置按钮在选中和非选中时的图片
                android:checked属性用来设置按钮选中状态-->
            <RadioButton
                android:id="@+id/main_rb_star"
                android:drawableTop="@drawable/main_rb_star"
                style="@style/main_rb"
                android:text="@string/label_star"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/main_rb_pair"
                android:drawableTop="@drawable/main_rb_pair"
                style="@style/main_rb"
                android:text="@string/label_pair"/>

            <RadioButton
                android:id="@+id/main_rb_luck"
                android:drawableTop="@drawable/main_rb_luck"
                style="@style/main_rb"
                android:checked="false"
                android:text="@string/label_luck"/>

            <RadioButton
                android:id="@+id/main_rb_me"
                android:drawableTop="@drawable/main_rb_me"
                style="@style/main_rb"
                android:checked="false"
                android:text="@string/label_me"/>

        </RadioGroup>

        <!--中间部分使用布局进行占位，后续会使用Fragment替换-->
        <LinearLayout
            android:id="@+id/main_layout_center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/main_tv_title"
            android:layout_above="@id/main_rg"
            android:orientation="vertical">

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>